# async-cog

./: .pre-commit-config.yaml  LICENSE  README.md  lzw.tif  pyproject.toml
async_cog/: __init__.py  cog.py  cog_reader.py  decoders.py  geo_key.py  ifd.py  tag.py
async_cog/geokeys/: __init__.py  geokey.py  geokey_code.py
async_cog/tags/: __init__.py  bytes_tag.py  fractions_tag.py  list_tag.py  number_tag.py  numbers_tag.py  string_tag.py  tag.py  tag_code.py  tag_type.py
tests/: conftest.py  test_cog.py  test_cog_reader.py  test_decoders.py  test_geokeys.py  test_ifd.py  test_tags.py
tests/mock_data/: be_cog.tif  cog.tif  deflate.tif  invalid_cog.tif  invalid_endian.tif  lzw.tif  packbits.tif
